Sonar correction : suppression du champ inutilisé consultantRepository dans SuiviProjetService